style.css
/* ---------------NAV BAR CODE--------------- */

.nav {
    /* ---Aesthetic--- */
    /* Set navbar's colour */
    background-color: white;

    /* Remove default bullet point */
    list-style-type: none;

    /* Elements will not leak */
    overflow: hidden;

    /* ---Positioning--- */
    /* Make sure it's a block */
    display: block;

    /* Padding will be included in element's width and height */
    box-sizing: border-box;

    /* Ensures nav stays at top of screen */
    position: fixed;

    /* Text stays to right of screen */
    text-align: right;
    
    /* Occupy full width of screen */
    width: 100%;

    /* Prevent condensing at low zoom */
    min-height: 108px;

    /* Prevent expansion at high zoom */
    max-height: 108px;

    /* Ensure that in all pages, the navbar stays at top of screen */
    top:0;

    /* Drop shadow effect */
    box-shadow: -2px 2px 20px 0.25px rgb(90, 90, 90);

    /* Navbar always stays on top */
    z-index: 256;
}

/* Target li tags within parent element of class nav */
.nav li {
    padding: 45px;

    /* Elements will render on horizontal plane while respecting vertical margins*/
    display: inline-block;
}

/* Target links within navbar */
.nav li a {
    /* Remove underline */
    text-decoration: none;
}

/* Make links respond to hover */
.nav li a:hover {

}

/* Highlight Currently Selected Page */
.currentPage {

}

/* L'histoire logo */
.logo {

    /* ---Positioning--- */
    /* Keep to left of nav links */
    float: left;

    /* Center the logo */
    padding: 10px 20px;
    max-height: 88px;
}

/* ---------------FOOTER CODE--------------- */

footer {
    /* ---Aesthetic--- */
    /* Set navbar's colour */
    background-color: #05445E;

    /* Remove default bullet point */
    list-style-type: none;

    /* Elements will not leak */
    overflow: hidden;

    /* Drop shadow effect */
    box-shadow: -2px 2px 20px 0.25px rgb(90, 90, 90);

    /* ---Positioning--- */
    /* Occupy full width of screen */
    width: 100%;

    /* Prevent condensing at low zoom */
    min-height: 108px;

    /* Prevent expansion at high zoom */
    max-height: 108px;
}

/* ---------------Backgrounds--------------- */
/* The page will have two backgrounds layered on each other */

.backImg {
    /* ---Aesthetic--- */
    /* Link the image used in background */
    background-image: url("assets/blue-background.jpg");

    /* ---Positioning--- */
    /* This element must be 'explicity positioned' for its position to be recognised by children */
    position: fixed;

    top: 0px;
    right: 0px;
    left: 0px;
    bottom: 0px;

    /* Move elemenet below navbar */
    /* Ensures navbar doesn't obscure children */
    margin-top: 108px;

    /* The background will cover the entire container */
    background-size: cover;

    /* No need for the background to repeat */
    background-repeat: no-repeat;

    /* The image will remain at its full height, at minimum */
    /* min-height: 100%; */

    /* Keep the background in the background */
    z-index: -1;
}

.backImg .backFlex {
    /* ---Aesthetic--- */
    
    /* Opacity and colour */
    /* Use RGB so image opacity is not affected */
    background-color: rgba(255, 255, 255, 0.8);

    /* Rounded border */
    border-radius: 50px;

    /* ---Positioning--- */

    /* Allow content to be modified relative to normal position */
    position: relative;

    /* Horizontally center the container */
    margin: auto;
    
    /* Give it some space from the top */
    margin-top: 5%;
    margin-bottom: 5%;

    /* 80% of the container (with explicitly defined position) */
    min-width: 70%;
    min-height: 80%;
    max-width: 70%;
    max-height: 80%;

    /* ---Technical--- */
    /* Deal with overflow */
    overflow: auto;

    /* Create flex container */
    /* display: flex; */

    /* Allow elements to wrap on zoom */
    /* flex-wrap: wrap; */

    /* Center content */

    /* Horizontally centered */
    justify-content: center;

    /* Vertically centered */
    align-content: space-around;

    /* Spacing between grid children */
    gap: 40px;

    /* Set out the grid */
    display: grid;

    /* Two columns of equal horizontal size */
    grid-template-columns: 5% 40% 40% 5%;

    /* Two Rows of specified vertical size */
    /* grid-template-rows: 50% 50%; */
}

.backFlex > div {
    /* background-color: rgba(255, 255, 255, 0.8); */
    /* border: 1px solid rgba(0, 0, 0, 0.8); */
    font-size: 30px;
    text-align: center;

    /* Vertically and horizontally centres grid items */
    margin: auto;
}

/* ---backFlex container objects--- */
.coverImg {
    /* Aesthetic */
    /* Drop shadow effect */
    box-shadow: -2px 2px 20px 0.25px rgb(90, 90, 90);

    /* ---Positioning--- */
    max-width: 512px;
    max-height: 512px;

}

.introText {

}

.dividerText {

}

/* Buttons */
button {
    /* ---Aesthetic--- */
    background-color: #189AB4;

    /* Remove Default border */
    border: none;
    /* Round Border */
    border-radius: 30px;

    /* Add spacing between text and background */
    padding-top: 10px;
    padding-bottom: 10px;
    padding-right: 30px;
    padding-left: 30px;

    /* Text formatting */
    color: white;
    font-weight: bold;
    font-size: 20px;
}

footer > button {
    /* ---Positioning--- */
    /* Center */
    display:block;
    margin: auto;
    margin-top: 30px;
}

#buttonLeft, #buttonRight {
    /* Vertically Center within grid */
    margin: auto;

    /* Buttons will scale to occupy size of grid */
    max-width:100%;
}

/* ---------------General Classes--------------- */
/* These classes are applicable to multiple elements, used to reduce repition */

/* Override default margin/padding */
.posOverride {
    /* Override default margin */
    margin: 0;

    /* Override default padding */
    padding: 0;
}

/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_full_page */
body, html {
    /* Assigns a height to the body/html, so we can specify heights for other contents (background) */
    height:100%;

    /* Fix annoying white borders that tend to crop up everywhere */
    margin: 0;
}

/* Set font family */
p, a, h1, h2, h3, h4, h5, h6 {
    /* Remove serifs for a more modern look */
    font-family: sans-serif;
}

/* Modifies every icon */
i {
    /* Icons will appear level with text */
    vertical-align: sub;

    /* Icons will be spaced from the text to the right by 5px */
    padding-right: 5px;
}

.parrallax {    
    /* Create the parallax scrolling effect */

    /* No scrolling with page */
    background-attachment: fixed;

    /* Keep centered */
    background-position: center;

    /* No repeating in tiles */
    background-repeat: no-repeat;

    /* Cover the viewport */
    background-size: cover;
}

/* Parallax Background Text */
.overlayText {
    /* ---Aesthetic--- */
    color: white;
    font-size: 30px;
    text-align: center;

    /* ---Positioning--- */
    /* W3 Schools Center Vertically - Using position & transform */
    /* https://www.w3schools.com/css/css_align.asp */
    position: absolute;

    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.super{
    vertical-align: super;
    font-size: small;
}

/* Selector notes */

/* > selects tags within an element */
/* , selects multiple elements */
/* : adds conditions as to when css is applied */
/* :: does something */

/* . selects by class */
/* # selects by id */

